# nyc-business-case

./: .gitignore  LICENSE  README.md  main.ipynb  pyproject.toml  utils.py
final_notebook/: main.ipynb
src/: config.py  llm_call.py  model.py  plots.py  utils.py
