[project]
name = "project"
version = "0.1.0"
description = "NYC Project Business Case Analysis"
readme = "README.md"
requires-python = "==3.11.4"
pkg-resources = "*"
dependencies = [
    "dotenv>=0.9.9",
    "dtale>=3.18.0",
    "httpcore>=1.0.9",
    "ipykernel>=6.30.0",
    "ipython>=9.4.0",
    "ipywidgets>=8.1.7",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "mistralai>=1.9.3",
    "nbformat>=5.10.4",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
]
